@@ -1,4 +1,4 @@
-/* $Id: winuser.h,v 1.38 2000-02-23 17:03:00 cbratschi Exp $ */
+/* $Id: winuser.h,v 1.39 2000-03-11 15:09:33 sandervl Exp $ */
 
 #ifndef __INCLUDE_WINUSER_H
 #define __INCLUDE_WINUSER_H
@@ -2034,6 +2034,9 @@ typedef struct
 #define IDI_ASTERISKA    MAKEINTRESOURCEA(32516)
 #define IDI_ASTERISKW    MAKEINTRESOURCEW(32516)
 #define IDI_ASTERISK       WINELIB_NAME_AW(IDI_ASTERISK)
+#define IDI_WINLOGOA     MAKEINTRESOURCEA(32517)
+#define IDI_WINLOGOW     MAKEINTRESOURCEW(32517)
+#define IDI_WINLOGO      WINELIB_NAME_AW(IDI_WINLOGO)
 
 #define IDC_BUMMERA      MAKEINTRESOURCEA(100)
 #define IDC_BUMMERW      MAKEINTRESOURCEW(100)
